# splashcat

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  SECURITY.md  UPLOADING-BATTLES.md  docker-entrypoint.sh  fly.toml  litefs.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: django.yml  docker-publish.yml  fly.yml  qodana_code_quality.yml
announcements/: admin.py  apps.py  models.py
announcements/migrations/: 0001_initial.py
assistant/: admin.py  data.py  forms.py  functions.py  models.py  orchestrator.py  runner.py  urls.py  views.py
assistant/migrations/: 0001_initial.py  0002_thread_initial_message.py  0003_thread_status_alter_thread_openai_file_id.py  0004_thread_runner_machine_id.py  0005_thread_content_type_thread_object_id_and_more.py  0006_sharedthread.py  0007_alter_sharedthread_uuid.py  0008_alter_sharedthread_uuid.py
assistant/templatetags/: openai.py
battles/: admin.py  apps.py  data_exports.py  gpt_descriptions.py  gpt_prompt.txt  models.py  schema.py  sitemaps.py  tasks.py  types.py  urls.py  utils.py  views.py
battles/format_schemas/: splashcat.schema.json
battles/formats/: splashcat_battle.py  vs_history_detail.py
battles/migrations/: 0001_initial.py  0002_alter_battle_uploader.py  0002_delete_unprocessedbattle.py  0002_player_order_alter_battle_vs_mode.py  0003_battle_anarchy_mode_battle_anarchy_point_change_and_more.py  0003_player_species.py  0004_alter_battle_judgement_alter_battle_knockout_and_more.py  0004_battle_splatfest_power.py  0005_alter_battle_judgement.py  0005_alter_player_title_adjective_and_more.py  0006_battle_battles_bat_uploade_275a8c_idx.py  0006_battle_x_battle_division.py  0007_remove_battle_player_clothing_gear_and_more.py  0007_remove_battle_splatfest_power_and_more.py  0008_alter_battle_duration.py  0008_battle_uploader_agent_extra_and_more.py  0009_alter_battle_splatnet_id.py  0009_alter_battle_uploader_agent_extra_and_more.py  0010_battle_battles_bat_uploade_d3fc8a_idx_and_more.py  0011_alter_team_judgement.py  0012_battle_splatfest_clout_contribution_and_more.py  0013_battle_gpt_description_and_more.py  0014_alter_battle_power.py  0015_remove_battle_battles_bat_uploade_7668dd_idx_and_more.py  0016_alter_team_fest_uniform_name.py  0017_battle_challenge_alter_battle_vs_rule.py  0018_battle_anarchy_points_battle_anarchy_rank_and_more.py  0019_battle_battles_bat_played__a334b4_idx_and_more.py  0020_alter_player_name_id.py  0021_battlegroup.py  0022_alter_battle_anarchy_mode_alter_battle_judgement_and_more.py  0022_battle_splatfest.py  0023_auto_20240223_1440.py  0023_rename_league.py  0024_auto_20240223_1440.py  0026_rename_league.py  0027_merge_20240302_0704.py  0028_alter_battle_splatnet_id.py  0029_battle_statink_id_battle_statink_username.py  0030_alter_battle_splatfest_clout_multiplier.py
battles/parsers/: splashcat.py  splatnet3.py
battles/templatetags/: duration.py  power.py  titles.py
blog/: models.py
blog/migrations/: 0001_initial.py  0002_blogpage.py  0003_blogpage_author_blogpagegalleryimage.py
db/: fly.toml
embed_images/: apps.py  urls.py  views.py
frontend/: build.mjs  tailwind.config.js
frontend/src/: index.js  styles.css
grizzco_jobs/: apps.py  models.py  urls.py
groups/: admin.py  forms.py  models.py  urls.py  views.py
groups/migrations/: 0001_initial.py  0002_group_privacy_level_alter_group_pending_invites.py  0003_group_pending_join_requests.py  0004_alter_group_pending_invites_and_more.py  0005_alter_group_pending_invites_and_more.py  0006_alter_group_description_alter_group_name.py
indexnow/: api.py  apps.py  signals.py  views.py
scripts/: run-celery-when-primary.py
search/: urls.py  views.py
splashcat/: ads.txt  allauth_forms.py  apps.py  asgi.py  auth.py  celery.py  context_processors.py  decorators.py  logging.py  middleware.py  oidc_provider_settings.py  robots.txt  schema.py  settings.py  sitemaps.py  storages.py  urls.py  views.py  wsgi.py
splatnet_album/: admin.py  apps.py  models.py  schema.py  types.py
splatnet_album/migrations/: 0001_initial.py  0002_alter_albumimage_splatnet_url.py  0003_albumimage_npln_image_id_and_more.py  0004_alter_albumimage_user.py
splatnet_assets/: admin.py  apps.py  badge_descriptions.py  common_model_choices.py  fields.py  models.py  schema.py  tasks.py  types.py
splatnet_assets/migrations/: 0001_initial.py  0002_alter_localizationstring_type_challenge.py  0003_alter_stage_name.py  0005_splatfest.py  (+13 more)
sponsors/: apps.py  urls.py  views.py
static/: google_science.js  manifest.json
statink_importer/: apps.py  models.py  tasks.py
templates/: 400.html  404.html  500.html  base.html  opengraph.html
users/: admin.py  forms.py  models.py  schema.py  sitemaps.py  tasks.py  types.py  urls.py  views.py
videos/: admin.py  bunny.py  models.py  urls.py  views.py
(+137 files in other folders)
