[tool.poetry]
name = "splashcat"
version = "0.1.0"
description = ""
authors = ["kitt <catgirl@catgirlin.space>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.2"
django-htmx = "^1.17"
django-allauth = "^0.61"
django-debug-toolbar = "^4.2"
channels = "^4.0"
daphne = "^4.0"
pillow = "^10.2.0"
msgpack = "^1.0.5"
jsonschema = "^4.18.3"
docutils = "^0.20"
requests = "^2.31.0"
python-dateutil = "^2.8.2"
sentry-sdk = "^1.39.1"
django-crispy-forms = "^2.0"
crispy-tailwind = "^0.5.0"
python-dotenv = "^1.0.0"
dj-database-url = "^2.0.0"
celery = { extras = ["redis"], version = "^5.3.6" }
django-celery-results = "^2.5.1"
django-celery-beat = {git = "https://github.com/celery/django-celery-beat.git"}
boto3 = "^1.28.3"
django-anymail = { extras = ["postmark"], version = "^10.1" }
django-storages = "^1.13.2"
eventlet = "^0.35.1"
django-unicorn = "^0.58.1"
psycopg = { extras = ["binary"], version = "^3.1.13" }
django-oidc-provider = "^0.8.0"
openai = "^1.9.0"
django-silk = "^5.0.3"
redis = { extras = ["hiredis"], version = "^4.6.0" }
ronkyuu = "^0.9"
html5lib = "^1.1"
django-markdownify = "^0.9.3"
beautifulsoup4 = "^4.12.3"
markdown = "^3.5.2"
django-filter = "^23.5"
strawberry-graphql-django = "^0.32.1"
asgiref = {git = "https://github.com/django/asgiref.git"}
django-choices-field = "^2.2.2"
django-cors-headers = "^4.3.1"
stripe = "^8.5.0"
strawberry-graphql = "0.220.0.dev.1709543239"
strawberry-persisted-queries = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
